--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>速度単位変換 - 広末 (H)</title>
+    <title>広末速度単位変換器</title>
     <style>
         /* シンプルなCSSでレイアウトを整えます */
         body {
@@ -66,7 +66,7 @@
 <body>
 
     <div class="container">
-        <h1>🚀 速度単位相互変換</h1>
+        <h1>🚀 広末的速度単位相互変換</h1>
         <p class="note">基準: **1 広末 (H) = 185 km/h**</p>
 
         <div class="converter-section">
